# statsdojo

./: .gitignore  README.md  pyproject.toml
pymc/: pymc_abtest_binary.ipynb  pymc_abtest_mixed_continuous_and_binary.ipynb  pymc_joint_dist_model.ipynb  pymc_tutorial.ipynb
rct/bayesian/: abtest_bayesian_model.ipynb  binary.ipynb  discrete_nonbinary.ipynb  gaussian.ipynb  revenue_per_user_mixed_model.html  revenue_per_user_mixed_model.ipynb
rct/simulator_prototype/: main.py  return_probability_model.py  return_probabiltiy_model_inspection.ipynb  user_class.py  utils.py
stan/: README.md
stan/examples/: bernoulli.stan  bernoullipy.py
stan/examples/lambert/ch16/: ch16.ipynb  code1_pp371.stan  code2_pp381.stan  code_3_pp389.stan  code_4_pp403.stan
