[tool.poetry]
name = "statsdojo"
version = "0.1.0"
description = ""
authors = ["fontanads <fontanads@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.1"
ipykernel = "^6.29.5"
scipy = "^1.14.1"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
altair = "^5.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
