[tool.poetry]
name = "statsdojo"
version = "0.1.0"
description = ""
authors = ["fontanads <fontanads@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pymc = "^5.16.2"
pandas = "^2.2.2"
numpy = "^1.26"  # downgraded froom 2.* due to incompatibility with pytensor, which is a requirment of pymc
scipy = "^1.12"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.1"
# setuptools = "^74.1.2"
# distlib = "^0.3.8"
graphviz = "^0.20.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.2.2"
ipywidgets = "^8.1.5"  # pymc sometimes uses this for interactivity
pytest = "^8.3.3"

[tool.poetry.group.dataviz.dependencies]
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
altair = "^5.4.1"
arviz = "^0.20.0"  # pymc uses this shit in the tutorial

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
